# gmf

./: README.md  Readme.md  meson.build
data/: desktop  gschema  meson.build
src/: copy-win.c  copy-win.h  gmf-app.c  gmf-app.h  gmf-bar.c  gmf-bar.h  gmf-dialog.c  gmf-dialog.h  gmf-icon-view.c  gmf-icon-view.h  gmf-info-win.c  gmf-info-win.h  gmf-win.c  gmf-win.h  info-win.c  info-win.h  main.c
